# entraid-mcp-server

./: CHANGELOG.md  README.md  SETUP.md  pyproject.toml
config/: .env.example
src/msgraph_mcp_server/: __init__.py  server.py
src/msgraph_mcp_server/auth/: __init__.py  graph_auth.py
src/msgraph_mcp_server/resources/: __init__.py  groups.py  mfa.py  signin_logs.py  users.py
src/msgraph_mcp_server/utils/: __init__.py  graph_client.py  password_generator.py
