[project]
name = "entraid-mcp-server"
version = "0.2.0"
description = "Enhanced EntraID MCP Server with comprehensive user lifecycle management for Microsoft Graph API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-core>=1.33.0",
    "azure-identity>=1.21.0",
    "fastmcp>=0.2.0",
    "mcp[cli]>=1.6.0",
    "msgraph-core>=1.3.3",
    "msgraph-sdk>=1.28.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
